[project]
name = "langchain-mongodb-monorepo"
version = "0.2.0"
description = "LangChain MongoDB mono-repo"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "langchain-core>=1.0.0,<1.1.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-tests>=1.0.0",
    "pytest>=8.4.2",
]

[dependency-groups]
dev = [
    "autodoc-pydantic>=2.2.0",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx-design>=0.6.1",
    "sphinx>=7.4.7",
    "sphinx-copybutton>=0.5.2",
    "toml>=0.10.2",
    "langchain-core>=1.0.1,<1.1.0",
    "sphinxcontrib-googleanalytics>=0.4",
    "langchain-mongodb",
    "langgraph-checkpoint-mongodb",
    "langgraph-store-mongodb",
    "langchain-community>=1.0.0a1,<1.1.0",
    "myst-parser>=3.0.1",
    "ipython>=8.18.1",
]

[tool.uv.sources]
langchain-mongodb = { path = "libs/langchain-mongodb", editable = true }
langgraph-checkpoint-mongodb = { path = "libs/langgraph-checkpoint-mongodb", editable = true }
langgraph-store-mongodb = { path = "libs/langgraph-store-mongodb", editable = true }
