[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langgraph-checkpoint-mongodb"
version = "0.1.0"
description = "Library with a MongoDB implementation of LangGraph checkpoint saver."
authors = []
license = "MIT"
readme = "README.md"
repository = "https://www.github.com/langchain-ai/langchain-mongodb"
packages = [{ include = "langgraph" }]

[tool.poetry.dependencies]
python = "^3.9.0,<4.0"
langgraph = "^0.2.38"
langgraph-checkpoint = "^2.0.0"
pymongo = "~4.9.0"
motor = ">3.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
anyio = "^4.4.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
pytest-watch = "^4.2.0"
pytest-repeat = "^0.9.3"
syrupy = "^4.0.2"
langchain-core = "^0.3"

[tool.poetry.group.lint.dependencies]
ruff = "^0.6.2"

[tool.poetry.group.typing.dependencies]
mypy = "^1.10"
simsimd = "^5.0.0"

[tool.poetry.group.dev.dependencies]
langchain-core = {git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core"}
langgraph = {git = "https://github.com/langchain-ai/langgraph.git", subdirectory = "libs/langgraph"}
langgraph-checkpoint = {git = "https://github.com/langchain-ai/langgraph.git", subdirectory = "libs/checkpoint"}

[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.0"

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5 -vv"
asyncio_mode = "auto"

[tool.ruff]
lint.select = [
  "E",  # pycodestyle
  "F",  # Pyflakes
  "UP", # pyupgrade
  "B",  # flake8-bugbear
  "I",  # isort
]
lint.ignore = ["E501", "B008", "UP007", "UP006"]

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
disallow_untyped_defs = "True"
explicit_package_bases = "True"
warn_no_return = "False"
warn_unused_ignores = "True"
warn_redundant_casts = "True"
allow_redefinition = "True"
disable_error_code = "typeddict-item, return-value"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.codespell]
optional = true

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.typing]
optional = true

[tool.poetry.group.dev]
optional = true
